[REFACTOR] update response checking coz I updated the way api response got called